k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: carstore-clientes
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: carstore-clientes
