k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: carstore-clientes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: carstore.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: carstore-clientes
                port:
                  number: 80
